print.css
/*
 * This document has been created with Marked.app <http://markedapp.com>.
 * Copyright 2011 Brett Terpstra
 * ---------------------------------------------------------------------------
 * Please leave this notice in place, along with any additional credits below.
 *
 * Byword.css theme is based on Byword.app <http://bywordapp.com>
 * Authors: @brunodecarvalho, @jpedroso, @rcabaco
 * Copyright 2011 Metaclassy, Lda. <http://metaclassy.com>
 * 
 * ---------------------------------------------------------------------------
 * Further deveoped by @ewancarr to extent "@media print" options.
 * See https://gist.github.com/3078027
 */


/* Basics                       */
/* ===========================  */

body {
    background-color: white;
    color: black;
    
    margin:20px;
    font-family: "Times New Roman", "Baskerville", "Times New Roman", serif;
	line-height: 19pt;
	font-size: 14pt;
	text-align: justify;
	counter-reset: figcaption;
}

a { 
    color: #308bd8;
    text-decoration:none;
}
a:hover {
    text-decoration: underline;
}

/* headings */
h1, h2 {
    line-height:1.2em;
    margin-top:40px;
    padding-bottom: 5px;
    font-family: "Arial", "Helvetica", "Arial";
    font-weight: 700;
    font-size: 18pt;
}
h1:first-child {
    margin-top:0;
    text-align: center;
}
h2.author {
	text-align: center;
	font-weight: normal;
	font-size: 14pt;
}
h3, h4, h5, h6 {
    margin-top:12px;
    margin-bottom:0;
	padding-bottom: 15px;
}
h5, h6 {
    font-size:0.9em;
    line-height:1.0em;
}
/* end of headings */
p {
    margin:0 0 24px 0;
}
p:last-child {
    margin:0;
}
#wrapper hr {
    width: 100%;
    margin: 3em auto;
    border: 0;
    color: black;
    background-color: #ccc;
    height: 1px;
    -webkit-box-shadow:0px 1px 0px rgba(255, 255, 255, 0.75);
}


/* lists */
ol {
    list-style: outside decimal;
}
ul {
    list-style: outside disc;
}
ol, ul {
    padding-left:0;
    margin-bottom:24px;
}
ol li {
    margin-left:28px;
}
ul li {
    margin-bottom:8px;
    margin-left:16px;
}
ol:last-child, ul:last-child {
    margin:0;
}
li > ol, li > ul {
    padding-left:12px;
}
dl {
    margin-bottom:24px;
}
dl dt {
    font-weight:bold;
    margin-bottom:8px;
}
dl dd {
    margin-left:0;
    margin-bottom:12px;
}
dl dd:last-child, dl:last-child {
    margin-bottom:0;
}
/* end of lists */



/* Figure numbering             */
/* ===========================  */

figcaption:before {
content: "Figure "  counter(figcaption) ": " attr(title);
counter-increment: figcaption;
font-weight: bold;
}

pre {
    white-space: pre-wrap;
    width: 96%;
    margin-bottom: 24px;
    overflow: hidden;
    padding: 3px 10px;
    -webkit-border-radius: 3px;
    background-color: #eee;
    border: 1px solid #ddd;
}
code {
    white-space: nowrap;
    font-size: 1.1em;
    padding: 2px;
    -webkit-border-radius: 3px;
    background-color: #eee;
    border: 1px solid #ddd;
}
pre code {
    white-space: pre-wrap;
    border: none;
    padding: 0;
    background-color: transparent;
    -webkit-border-radius: 0;
}
blockquote {
    margin-left: 20px;
    margin-right: 0;
    margin-bottom: 20px;
    width: 90%;
    padding: 0 10px;
    border-left: none;
    color: black;
}
table {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 24px;
    border-spacing: 0;
}
table th {
    padding: 3px 10px;
    background-color: white;
    border-top: none;
    border-left: none;
    border-right: none;
    border-bottom: 1px solid black;
}
table td {
    padding: 3px 10px;
    border-top: none;
    border-left: none;
    border-bottom: none;
    border-right: none;
}
caption {
    font-size: 1.2em;
    font-weight: bold;
    margin-bottom: 20px;
}
figure {
    display: block;
    text-align: center;
}
#wrapper img {
    border: none;
    display: block;
    margin: 1em auto;
    max-width: 100%;
}
figcaption {
    font-size: 0.8em;
    font-style: italic;
}
mark {
    background: #fefec0;
    padding:1px 3px;
}


/* classes */

.markdowncitation {
}
.footnote {
    font-size: 0.8em;
    vertical-align: super;
}
.footnotes ol {
    font-weight: bold;
}
.footnotes ol li p {
    font-weight: normal;
}

/* custom formatting classes */

.shadow {
    -webkit-box-shadow: 0 2px 4px #999;
}

.source {
    text-align: center;
    font-size: 0.8em;
    color: #777;
    margin: -40px;
}

@media all 
{
 .page-break {display:none;}
}

@media screen {
	.inverted, .inverted #wrapper {
	    background-color: #1a1a1a !important;
	    color: #bebebe !important;
	    
	   	/* SANS-SERIF */	
		font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
		-webkit-font-smoothing: antialiased !important;
		
		/* SERIF */
		/*
		font-family: "Cochin", "Baskerville", "Georgia", serif !important;
		-webkit-font-smoothing: subpixel-antialiased !important;
		*/
		/* MONO */
		/*
		font-family: "Courier", mono !important;
		-webkit-font-smoothing: antialiased !important;
		*/
	}
	.inverted a {
	    color: #308bd8 !important;
	}
	img { 
		max-width: 100%;
	}
	.inverted hr {
	    color: #666 !important;
	    border: 0;
	    background-color: #666 !important;
	    -webkit-box-shadow: none !important;
	}
	.inverted pre {
	    background-color: #222 !important;
	    border-color: #3c3c3c !important;
	}
	.inverted code {
	    background-color: #222 !important;
	    border-color: #3c3c3c !important;
	}
	.inverted blockquote {
	    border-color: #333 !important;
	    color: #999 !important;
	}
	.inverted table {
	    border-color: #3c3c3c !important;
	}
	.inverted table th {
	    background-color: #222 !important;
	    border-color: #3c3c3c !important;
	}
	.inverted table td {
	    border-color: #3c3c3c !important;
	}
	.inverted mark {
	    background: #bc990b !important;
	    color:#000 !important;
	}
    .inverted .shadow { -webkit-box-shadow: 0 2px 4px #000 !important; }
	#wrapper {
        background: transparent;
        margin: 40px;
    }
}

/* Printing support */

@media print {
	
body {
	overflow: auto;
	padding-left: 5%;
	padding-right: 5%;
	text-align: justify;
	font-family: "Times New Roman", "Times", serif;
	font-size: 11pt;
	line-height: 15pt;
	
	display: block;
    page: main;
    counter-reset: page 1;
    color: black;
	}
	
    h1, h2 {     
	    line-height:1.2em;
	    margin-top:40px;
	    padding-bottom: 5px;
        font-family: "Helvetica", "Arial", sans serif;     
        text-align: left;
        font-weight: 100;
    }
    
    h1:first-child {
    	margin-top:100;
	    text-align: center;
	    padding-left: 10%;
	    padding-right: 10%;
	    padding-top: 20%;
	}
     
    img, pre, blockquote, table, figure {
        page-break-inside: avoid;
    }
    
	blockquote {
    	margin-left: 20px;
	    margin-right: 20px;
	    margin-bottom: 20px;
	    width: 90%;
	    color: black;
	}

    h3, h4, h5, h6, h7 {
        font-family: "Helvetica Neue", "Arial", sans serif;     
        text-align: left;
	}
	
    pre, code {
		border: none !important;
	}

	#wrapper {
        background: #fff;
        position: relative;
        text-indent: 0px;
		margin-top:40%;
    }

    .footnotes {
        page-break-before: always;
    }
    .page-break {display:block; page-break-before: always; }

    img {
    	max-width: 100%;
    }
    
}

@page {
	@top { content: string(chapter-title) } 
    @bottom { content: counter(page) }
    size:8.5in 11in; 
    margin: 2cm;
}

